--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -294,82 +294,7 @@
             <div class="tab-grid portfolio-box work active">
               <div class="tab-item portfolio-item">
                 <div class="work-img">
-                  <img src="images/work1.jpg" alt="" />
-                </div>
-                <div class="work-info">
-                  <h4>Frontend Project</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Sunt, numquam.
-                  </p>
-                  <div class="tech-used">
-                    <p>HTML5, CSS3, JavaScript</p>
-                  </div>
-                  <div class="portfolio-icon work-icon">
-                    <a href="https://www.linkedin.com/in/parthpanchal1525/details/projects/" target="_blank">
-                      <i class="bx bx-arrow-back"></i>
-                      <span class="tooltip">Preview</span>
-                    </a>
-                    <a href="https://github.com/DevParth25" target="_blank">
-                      <i class="bx bxl-github"></i>
-                      <span class="tooltip">Github Repository</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="tab-item portfolio-item">
-                <div class="work-img">
-                  <img src="images/work2.jpg" alt="" />
-                </div>
-                <div class="work-info">
-                  <h4>Frontend Project</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Sunt, numquam.
-                  </p>
-                  <div class="tech-used">
-                    <p>HTML5, CSS3, JavaScript</p>
-                  </div>
-                  <div class="portfolio-icon work-icon">
-                    <a href="https://www.linkedin.com/in/parthpanchal1525/details/projects/" target="_blank">
-                      <i class="bx bx-arrow-back"></i>
-                      <span class="tooltip">Preview</span>
-                    </a>
-                    <a href="https://github.com/DevParth25" target="_blank">
-                      <i class="bx bxl-github"></i>
-                      <span class="tooltip">Github Repository</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="tab-item portfolio-item">
-                <div class="work-img">
-                  <img src="images/work3.jpg" alt="" />
-                </div>
-                <div class="work-info">
-                  <h4>Frontend Project</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Sunt, numquam.
-                  </p>
-                  <div class="tech-used">
-                    <p>React.js , Tailwind.css</p>
-                  </div>
-                  <div class="portfolio-icon work-icon">
-                    <a href="#">
-                      <i class="bx bx-arrow-back"></i>
-                      <span class="tooltip">Preview</span>
-                    </a>
-                    <a href="https://github.com/DevParth25" target="_blank">
-                      <i class="bx bxl-github"></i>
-                      <span class="tooltip">Github Repository</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="tab-item portfolio-item">
-                <div class="work-img">
-                  <img src="images/work4.jpg" alt="" />
+                  <img src="images/caraimg.jpg" alt="" />
                 </div>
                 <div class="work-info">
                   <h4>Frontend Project</h4>
@@ -381,7 +306,7 @@
                     <p>HTML5, CSS3, Bootstrap, JavaScript</p>
                   </div>
                   <div class="portfolio-icon work-icon">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/parthpanchal1525/details/projects/" target="_blank">
                       <i class="bx bx-arrow-back"></i>
                       <span class="tooltip">Preview</span>
                     </a>
@@ -394,7 +319,7 @@
               </div>
               <div class="tab-item portfolio-item">
                 <div class="work-img">
-                  <img src="images/work5.jpg" alt="" />
+                  <img src="images/portimg.jpg" alt="" />
                 </div>
                 <div class="work-info">
                   <h4>Frontend Project</h4>
@@ -403,7 +328,32 @@
                     Sunt, numquam.
                   </p>
                   <div class="tech-used">
-                    <p>HTML5, CSS3, Bootstrap, JavaScript, PHP</p>
+                    <p>HTML5, CSS3, Bootstrap, JavaScript</p>
+                  </div>
+                  <div class="portfolio-icon work-icon">
+                    <a href="https://www.linkedin.com/in/parthpanchal1525/details/projects/" target="_blank">
+                      <i class="bx bx-arrow-back"></i>
+                      <span class="tooltip">Preview</span>
+                    </a>
+                    <a href="https://github.com/DevParth25" target="_blank">
+                      <i class="bx bxl-github"></i>
+                      <span class="tooltip">Github Repository</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-item portfolio-item">
+                <div class="work-img">
+                  <img src="images/studentprimg.jpg" alt="" />
+                </div>
+                <div class="work-info">
+                  <h4>Full Stack</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Sunt, numquam.
+                  </p>
+                  <div class="tech-used">
+                    <p>PHP , MYSQL</p>
                   </div>
                   <div class="portfolio-icon work-icon">
                     <a href="#">
@@ -417,6 +367,32 @@
                   </div>
                 </div>
               </div>
+              <div class="tab-item portfolio-item">
+                <div class="work-img">
+                  <img src="images/herbstoreimg.jpg" alt="" />
+                </div>
+                <div class="work-info">
+                  <h4>Full Stack</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Sunt, numquam.
+                  </p>
+                  <div class="tech-used">
+                    <p>C# , MYSQL</p>
+                  </div>
+                  <div class="portfolio-icon work-icon">
+                    <a href="#">
+                      <i class="bx bx-arrow-back"></i>
+                      <span class="tooltip">Preview</span>
+                    </a>
+                    <a href="https://github.com/DevParth25" target="_blank">
+                      <i class="bx bxl-github"></i>
+                      <span class="tooltip">Github Repository</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
             </div>
 
             <div class="tab-grid portfolio-box service">
